--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,10 @@
           <artifactId>spring-boot</artifactId>
           <version>2.0.2.RELEASE</version>
       </dependency>
+      <dependency>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-starter-batch</artifactId>
+      </dependency>
 
     <dependency>
       <groupId>org.skyscreamer</groupId>
